test/scc/ext/tm/semantic-errors/025.t
void foo()
{
}

void test()
{
    _Atomic
        foo();
}